--- a/backend/mergewhat/src/main/resources/application.yml
+++ b/backend/mergewhat/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
-#  datasource:
-#    url: jdbc:mysql://${DATABASE_HOST}:${MARIA_DATABASE_PORT}/${MARIA_DATABASE_NAME}
-#    username: ${DB_USERNAME}
-#    password: ${DB_PASSWORD}
-#    driver-class-name: org.mysql.jdbc.Driver
+  datasource:
+    url: jdbc:mysql://localhost:3306/sijang?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: sijang
+    password: sijang
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     show-sql: true
