--- a/front/android/app/src/main/AndroidManifest.xml
+++ b/front/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.matzipapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
@@ -14,6 +15,10 @@
       android:theme="@style/AppTheme"
       android:supportsRtl="true"
       android:usesCleartextTraffic="true">
+        <meta-data
+      android:name= "com.google.android.geo.API_KEY"
+      android:value= "AIzaSyCBUD-IkQGB95aR8f4wL_iKil40cVO4uxQ"/>
+      
 
       <activity
         android:name=".MainActivity"
@@ -25,6 +30,8 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            <data android:host="oauth"
+              android:scheme="kakao3e4babfcb6814efcfdfd18c83c0e6c81"/>
         </intent-filter>
       </activity>
     </application>
