--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mergeWhat",
+  "name": "시장하시죠",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -21,12 +21,14 @@
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-config": "^1.5.5",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@react-native/typescript-config": "0.78.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
