--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "matzip-server",
+  "name": "mergeWhat-server",
   "version": "0.0.1",
   "description": "",
-  "author": "InKyoJeong",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -35,9 +34,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
-    "mysql2": "^3.14.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
     "pm2": "^5.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
