--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.8",
@@ -20,6 +21,7 @@
     "@tanstack/react-query": "^5.74.3",
     "axios": "^1.8.4",
     "react": "19.0.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.78.1",
     "react-native-config": "^1.5.5",
     "react-native-encrypted-storage": "^4.0.3",
@@ -30,6 +32,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
@@ -47,11 +50,17 @@
     "@types/react": "^19.1.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-loader": "^10.0.0",
     "eslint": "^8.19.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "engines": {
     "node": ">=18"
