--- a/backend/mergewhat/build.gradle
+++ b/backend/mergewhat/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -30,6 +32,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -38,6 +41,8 @@ dependencies {
 	implementation 'org.apache.tika:tika-core:2.9.0'
 	implementation 'org.apache.tika:tika-parsers-standard-package:2.9.0'
 	implementation 'net.sourceforge.tess4j:tess4j:5.7.0'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 
 }
 
