마이페이지 병합 완료. kakaoLogin 브랜치에서 작업

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "target": "ES2015",
+    "lib": [
+      "ES2015"
+    ],
+    // 선언만 되고 사용되지 않은 지역 변수는 에러로 처리하지 않음
+    "noUnusedLocals": false,
+    // 선언만 되고 사용되지 않은 함수 매개변수는 에러로 처리하지 않음
+    "noUnusedParameters": false
+  }
 }
