--- a/front/package.json
+++ b/front/package.json
@@ -20,8 +20,8 @@
     "@react-navigation/stack": "^7.2.8",
     "@tanstack/react-query": "^5.74.3",
     "axios": "^1.8.4",
-    "react": "19.0.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.78.1",
     "react-native-config": "^1.5.5",
     "react-native-encrypted-storage": "^4.0.3",
