--- a/backend/mergewhat/build.gradle
+++ b/backend/mergewhat/build.gradle
@@ -43,7 +43,8 @@ dependencies {
 	implementation 'net.sourceforge.tess4j:tess4j:5.7.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-
+	implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
+	implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
 }
 
 tasks.named('test') {
